Fix overflow on embedded pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@
 
 html, body {
   background: #EEE;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
